# Traces

./: .env.example  .gitignore  .gitmodules  PP1-Collection_Database.xlsx  README.md  SCHEMA.md  check_images.py  compute_embeddings.py  migrate_v4.py  migrate_v5.py  pp1_collection.db  pp1_to_sqlite.py  review_translations.xlsx  schema.sql  translate_content.py
backend/: Cargo.toml  LICENCE  README.md  Rocket.toml
backend/.git-patches/: 0001-Initial-commit.patch  0002-Use-macOS-Metal-config.patch  0003-Reflect-request-Origin-for-CORS-instead-of-hardcoded.patch  0004-Add-title-placeholder-to-ResultArtwork-for-client-pa.patch  0005-Expose-testimony-content-as-en-fr-nl-source-lang.patch  0006-Add-location_id-to-testimonies-stamped-by-client-at-.patch  0007-Serialize-artwork-title-fix-broken-testimonies-and-t.patch  0008-Serialize-artworks.thumbnail_url.patch  0009-Serialize-question-content-as-en-fr-nl.patch  0010-Update-Cargo.lock-for-qwen3-asr-Metal-deps-ignore-mo.patch  0011-Serialize-artwork-keywords-emotions-type_of_object-a.patch  0012-Wire-visitor_id-into-testimony-submission.patch  0013-Add-catch-all-OPTIONS-route-to-fix-CORS-preflight-fa.patch  0014-Raise-bit-image-max-width-from-256-to-576-dots.patch  0015-Add-POST-summary-generate-end-of-session-ticket-text.patch  0016-Add-moderation-routes-global-testimony-queue-status-.patch  0017-Serve-the-frontend-at-and-namespace-API-routes-under.patch
backend/examples/: fetch_model.rs  test_print.rs
backend/src/: artworks.rs  common.rs  database.rs  emotions.rs  main.rs  ollama.rs  print.rs  questions.rs  scoring.rs  (+5 more)
(+20 files in other folders)
